--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,14 +1,9 @@
 run:
   deadline: 5m
   issues-exit-code: 1
-  tests: true
+  tests: false
   skip-dirs:
     - tests
-    - src
-    - node_modules
-    - dist
-    - assets
-    - .storybook
 
 output:
   format: colored-line-number
